# conjugation

./: .dockerignore  .mailmap  Dockerfile  README.md  fly.toml
.github/workflows/: api.yml  rust.yml  ui.yml
conjugation-api/: Cargo.toml
conjugation-api/data/: verbs.db
conjugation-api/src/: main.rs
conjugation-ui/: README.md  bun.lockb  codegen.ts  eslint.config.js  package.json  tailwind.config.js  vitest.config.js
conjugation-ui/schema/: schema.graphql
conjugation-ui/src/: app.html
conjugation-ui/src/components/: Error.svelte  Game.svelte  Guess.spec.ts  Guess.svelte  Practise.svelte  Table.svelte  Tense.svelte  Verb.svelte
conjugation-ui/src/lib/: pronoun.spec.ts  pronoun.ts
conjugation-ui/src/routes/: +layout.svelte  +page.svelte  Header.svelte  styles.css
conjugation-ui/src/routes/practise/[infinitive]/[tense]/: +page.server.ts  +page.svelte
conjugation-ui/src/routes/practise/random/: +page.server.ts  +page.svelte
conjugation-ui/src/routes/verb/: +page.server.ts  +page.svelte
conjugation-ui/src/routes/verb/[infinitive]/[tense]/: +page.server.ts  +page.svelte  +page.ts
