[package]
name = "conjugation-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
juniper = "0.15.11"
lazy_static = "1.4.0"
tide = "0.16.0"
sqlx = { version = "0.7", features = [ "runtime-async-std-native-tls", "sqlite",  ] }
http-types = "2.12.0"
