[package]
name = "conjugation-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
juniper = "0.16.1"
lazy_static = "1.5.0"
axum = "0.8.1"
sqlx = { version = "0.8.2", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
